text-align-correct

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -117,4 +117,12 @@ body {
     padding-left: 20px;
     padding-right: 20px;
   }
+
+  .title {
+    text-align: center;
+  }
+
+  .text {
+    text-align: center;
+  }
 }
